[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pxr-arch"
version = "0.25.2"
description = "Regroup architecture-dependent code used in OpenUSD"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE.txt", "NOTICE.txt"]
keywords = ["pixar", "open-usd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]

[project.urls]
Repository = "https://github.com/untwine/pxr-arch"
Documentation = "https://untwine.github.io/pxr-arch/"

[tool.scikit-build]
cmake.version = ">=3.21,<4"
cmake.args = [
    "-DBUILD_TESTS=OFF",
    "-DBUILD_DOCS=OFF",
    "-DBUILD_SHARED_LIBS=ON"
]
wheel.exclude = ["pxr-arch"]
sdist.exclude = ["test", "doc", ".github"]